将数据库的session.py改成了异步。 同时环境配置.env.example修改了数据库URL，改成了async URL了。

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Database
-DATABASE_URL=postgresql://traceable_user:traceable_pass@localhost:5432/traceable_db
+DATABASE_URL=postgresql+asyncpg://traceable_user:traceable_pass@localhost:5432/traceable_db
 
 # Redis
 REDIS_URL=redis://localhost:6379/0
