用如下命令改动了pyproject.toml，也是全体异步的一个过程之一。 poetry add asyncpg poetry remove psycopg2-binary

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,6 @@ fastapi = "^0.109.0"
 uvicorn = {extras = ["standard"], version = "^0.27.0"}
 sqlalchemy = "^2.0.25"
 alembic = "^1.13.1"
-psycopg2-binary = "^2.9.9"
 redis = "^5.0.1"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 passlib = {extras = ["bcrypt"], version = "^1.7.4"}
@@ -19,6 +18,7 @@ python-multipart = "^0.0.6"
 pydantic = {extras = ["email"], version = "^2.5.3"}
 pydantic-settings = "^2.1.0"
 aiofiles = "^23.2.1"
+asyncpg = "^0.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.4"
